petclinic-db-service.yml

apiVersion: v1
kind: Service
metadata:
  name: petclinic-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: petclinic-db
